--- a/navbar/index.html
+++ b/navbar/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="nav-container">
       <h1>Variation 2: Vertical with hover effect</h1>
-      <nav class="nav-2">
+      <nav class="nav2">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -29,7 +29,7 @@
         <button class="login-btn">Login</button>
       </nav>
     </div>
-    <div>
+    <div class="nav-container"">
       <h1>Variation 3: Horizontal with dropdown</h1>
       <nav class="nav3">
         <ul>
