--- a/navbar/index.html
+++ b/navbar/index.html
@@ -42,7 +42,7 @@
               <a href="#">Contact</a>
             </div>
             <li><a href="#">Products</a></li>
-            <li><button>Login</button></li>
+            <li><button class="login-btn">Login</button></li>
           </li>
         </ul>
       </nav>
