--- a/webpage/index.html
+++ b/webpage/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="container mt-4">
+    <div class="container">
       <!-- Added a container and margin top -->
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
@@ -92,15 +92,14 @@
               alt="here"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Here</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Here by Alessia Cara aka the introverts anthem.
               </p>
               <a
                 href="https://youtu.be/UKp2CrfmVfw?si=lhIHbBUYq-PtnCrj"
                 class="btn btn-primary"
-                >Go somewhere</a
+                >Watch MV</a
               >
             </div>
           </div>
@@ -113,15 +112,14 @@
               alt="wild"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Wild Things</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Wild Things by Alessia Cara, my fav songs of all time.
               </p>
               <a
-                href="https://youtu.be/UKp2CrfmVfw?si=lhIHbBUYq-PtnCrj"
+                href="https://youtu.be/De30ET0dQpQ?si=e5F6_lrfruM3VHoC"
                 class="btn btn-primary"
-                >Go somewhere</a
+                >Watch MV</a
               >
             </div>
           </div>
@@ -134,15 +132,14 @@
               alt="dead"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Dead Man</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Dead Man by Alessia Cara, recent release which is ssick.
               </p>
               <a
                 href="https://youtu.be/IXjYdcYX7qk?si=cKzXtqheNfnEaoNf"
                 class="btn btn-primary"
-                >Go somewhere</a
+                >Watch MV</a
               >
             </div>
           </div>
